--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gauge App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body ng-controller="mainCtrl">
@@ -14,21 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
                 <a class="navbar-brand" href="#">Gauge</a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                </ul>
             </div>
         </div>
     </nav>
@@ -37,30 +23,43 @@
 
         <div class="row">
             <div class="col-sm-12">
+                <div class="alert alert-info" role="alert">
+                    <h4>Usuários Influentes</h4>
+                    <p>
+                        Utilize o fltro abaixo para <b>visualizar</b> os dados dos usuários influentes.
+                    </p>
+                </div>
+            </div>
 
+
+            <div class="col-sm-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Panel title</h3>
-                        {{selectedBrand}}
-                        <select class="form-control" ng-model="selectedBrand" 
-                        ng-change="mountGraphic(selectedBrand)" ng-options="brand.id as brand.name for brand in brands"></select>
-
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h3 class="panel-title pull-right">Selecione a marca:</h3>
+                            </div>
+                            <div class="col-sm-6">
+                                <select class="form-control" ng-model="selectedBrand" ng-change="mountGraphic(selectedBrand)" ng-options="brand.id as brand.name for brand in brands"></select>
+                            </div>
+                        </div>
                     </div>
                     <div class="panel-body">
                         <canvas ng-if="isCreated" id="base" class="chart-horizontal-bar" chart-data="data" chart-labels="labels">
                         </canvas>
+                        <div ng-hide="isCreated" class="alert alert-warning" role="alert">
+                            <p><b>Atenção!</b> Nenhuma marca selecionada.</p>
+                        </div>
                     </div>
-
                 </div>
             </div>
-
     </main>
 
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/chart.js/dist/Chart.min.js"></script>
     <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
-    <script src="app.js"></script>
-    <script src="controllers/main.controller.js"></script>
+    <script src="assets/app.js"></script>
+    <script src="assets/controllers/main.controller.js"></script>
 
 </body>
 
